# release-gitter

./: .drone.star  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main_test.py  pseudo_builder.py  pseudo_builder_test.py  pyproject.toml  release_gitter.py  release_gitter_test.py  requirements-dev.txt  setup.py  tox.ini
.gitea/workflows/: ci.yml  test.yml  upload.yml
docs/source/: conf.py  index.rst
sample_pseudo_bin/: .pre-commit-hooks.yaml  pyproject.toml
scripts/: update_readme.py
