[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "release-gitter"
dynamic = ["version"]
description = "Easily download releases from sites like Github and Gitea"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
authors = [
    { name = "Ian Fijolek", email = "iamthefij@gmail.com" }
]
maintainers = [
    { name = "Ian Fijolek", email = "iamthefij@gmail.com" }
]
requires-python = ">=3.7"
dependencies = ["requests"]

[project.optional-dependencies]
builder = [
    "toml",
    "wheel",
]

[project.scripts]
release-gitter = "release_gitter:main"

[project.urls]
Homepage = "https://git.iamthefij.com/iamthefij/release-gitter"

[tool.hatch.version]
path = "release_gitter.py"

[tool.hatch.build]
include = ["release_gitter.py", "pseudo_builder.py"]

[tool.hatch.envs.test]
dependencies = [
    "coverage",
]

[tool.hatch.envs.test.scripts]
run = [
    "coverage erase",
    "coverage run --source=release_gitter,pseudo_builder -m unittest discover -p '*_test.py'",
    "coverage report -m # --fail-under 70",
]

[[tool.hatch.envs.test.matrix]]
python = ["3", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["pre-commit"]

[tool.hatch.envs.lint.scripts]
all = "pre-commit run --all-files"
install-hooks = "pre-commit install --install-hooks"

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"
